--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <meta name="description" content="" />
 
         <link rel="stylesheet" href="css/bootstrap.min.css">
-        <link rel="stylesheet" href="css/amazeui.min.css">
+        <link rel="stylesheet" href="css/amazeui.min.css?v=1.0.1">
         <link rel="stylesheet" href="css/swiper.min.css">
         <link rel="stylesheet" href="css/style.min.css?v=1.0.0">
     </head>
