首页技术文档部分功能

--- a/index.html
+++ b/index.html
@@ -220,87 +220,111 @@
 
             <div class="container technical-summary">
                 <!-- 左侧导航 -->
-                    <div class="menu-summary">
-                        <div class="content">
-                            <div class="pr">
-                                <div class="title">技术文档</div>
-                            </div>
-                            <div class="menu-items">
-                                <section data-am-widget="accordion" class="am-accordion am-accordion-default" data-am-accordion='{ "multiple": true }'>
-                                    <dl class="am-accordion-item">
-                                        <dt class="am-accordion-title">PHP</dt>
-                                        <dd class="am-accordion-content am-collapse">
-                                            <ul class="list-group">
-                                                <li class="list-group-item">
-                                                    <a href="javascript:void(0);">Yii</a>
-                                                </li>
-                                                <li class="list-group-item">
-                                                    <a href="javascript:void(0);">ThinkPHP</a>
-                                                </li>
-                                                <li class="list-group-item">
-                                                    <a href="javascript:void(0);">Laravel</a>
-                                                </li>
-                                            </ul>
-                                        </dd>
-                                    </dl>
-                                    <dl class="am-accordion-item">
-                                        <dt class="am-accordion-title">HTML</dt>
-                                        <dd class="am-accordion-content am-collapse ">
-                                        </dd>
-                                    </dl>
-                                    <dl class="am-accordion-item">
-                                        <dt class="am-accordion-title">javascript</dt>
-                                        <dd class="am-accordion-content am-collapse ">
-                                        </dd>
-                                    </dl>
-                                    <dl class="am-accordion-item">
-                                        <dt class="am-accordion-title">iOS</dt>
-                                        <dd class="am-accordion-content am-collapse ">
-                                        </dd>
-                                    </dl>
-                                    <dl class="am-accordion-item">
-                                        <dt class="am-accordion-title">Android</dt>
-                                        <dd class="am-accordion-content am-collapse ">
-                                        </dd>
-                                    </dl>
-                                    <dl class="am-accordion-item">
-                                        <dt class="am-accordion-title">H5</dt>
-                                        <dd class="am-accordion-content am-collapse ">
-                                        </dd>
-                                    </dl>
-                                    <dl class="am-accordion-item">
-                                        <dt class="am-accordion-title">小程序</dt>
-                                        <dd class="am-accordion-content am-collapse ">
-                                            <ul class="list-group">
-                                                <li class="list-group-item">
-                                                    <a href="javascript:void(0);">微信</a>
-                                                </li>
-                                                <li class="list-group-item">
-                                                    <a href="javascript:void(0);">支付宝</a>
-                                                </li>
-                                            </ul>
-                                        </dd>
-                                    </dl>
-                                    <dl class="am-accordion-item">
-                                        <dt class="am-accordion-title">Linux</dt>
-                                        <dd class="am-accordion-content am-collapse ">
-                                            <ul class="list-group">
-                                                <li class="list-group-item">
-                                                    <a href="javascript:void(0);">CentOS</a>
-                                                </li>
-                                            </ul>
-                                        </dd>
-                                    </dl>
-                                    <dl class="am-accordion-item">
-                                        <dt class="am-accordion-title">其他</dt>
-                                        <dd class="am-accordion-content am-collapse ">
-                                        </dd>
-                                    </dl>
-                                </section>
-                            </div>
+                <div class="menu-summary">
+                    <div class="content">
+                        <div class="pr">
+                            <div class="title">技术文档</div>
+                        </div>
+                        <div class="menu-items">
+                            <section data-am-widget="accordion" class="am-accordion am-accordion-default" data-am-accordion='{ "multiple": true }'>
+                                <dl class="am-accordion-item">
+                                    <dt class="am-accordion-title">PHP</dt>
+                                    <dd class="am-accordion-content am-collapse">
+                                        <ul class="list-group">
+                                            <li class="list-group-item menuitem" data-id="1.1">
+                                                <a href="javascript:void(0);">Yii</a>
+                                            </li>
+                                            <li class="list-group-item menuitem" data-id="1.2">
+                                                <a href="javascript:void(0);">ThinkPHP</a>
+                                            </li>
+                                            <li class="list-group-item">
+                                                <a href="javascript:void(0);">Laravel</a>
+                                            </li>
+                                        </ul>
+                                    </dd>
+                                </dl>
+                                <dl class="am-accordion-item">
+                                    <dt class="am-accordion-title">HTML</dt>
+                                    <dd class="am-accordion-content am-collapse ">
+                                    </dd>
+                                </dl>
+                                <dl class="am-accordion-item">
+                                    <dt class="am-accordion-title">javascript</dt>
+                                    <dd class="am-accordion-content am-collapse ">
+                                    </dd>
+                                </dl>
+                                <dl class="am-accordion-item">
+                                    <dt class="am-accordion-title">iOS</dt>
+                                    <dd class="am-accordion-content am-collapse ">
+                                    </dd>
+                                </dl>
+                                <dl class="am-accordion-item">
+                                    <dt class="am-accordion-title">Android</dt>
+                                    <dd class="am-accordion-content am-collapse ">
+                                    </dd>
+                                </dl>
+                                <dl class="am-accordion-item">
+                                    <dt class="am-accordion-title">H5</dt>
+                                    <dd class="am-accordion-content am-collapse ">
+                                    </dd>
+                                </dl>
+                                <dl class="am-accordion-item">
+                                    <dt class="am-accordion-title">小程序</dt>
+                                    <dd class="am-accordion-content am-collapse ">
+                                        <ul class="list-group">
+                                            <li class="list-group-item">
+                                                <a href="javascript:void(0);">微信</a>
+                                            </li>
+                                            <li class="list-group-item">
+                                                <a href="javascript:void(0);">支付宝</a>
+                                            </li>
+                                        </ul>
+                                    </dd>
+                                </dl>
+                                <dl class="am-accordion-item">
+                                    <dt class="am-accordion-title">Linux</dt>
+                                    <dd class="am-accordion-content am-collapse ">
+                                        <ul class="list-group">
+                                            <li class="list-group-item">
+                                                <a href="javascript:void(0);">CentOS</a>
+                                            </li>
+                                        </ul>
+                                    </dd>
+                                </dl>
+                                <dl class="am-accordion-item">
+                                    <dt class="am-accordion-title">其他</dt>
+                                    <dd class="am-accordion-content am-collapse ">
+                                    </dd>
+                                </dl>
+                            </section>
                         </div>
                     </div>
+                </div>
                 <!-- 右侧主体 -->
+                <div class="main-summary">
+                    <div class="markdown active" data-id="0.0">
+                        <textarea placeholder="我们不生产技术，我们只是技术的搬运工!" readonly="readonly"></textarea>
+                    </div>
+                    <div class="markdown hidden" data-id="1.1">
+                        <h1>PHP-Yii</h1>
+                        <p class="paragraph">Yii Framework是一个基于组件、用于开发大型 Web 应用的高性能 PHP 框架。Yii提供了今日Web 2.0应用开发所需要的几乎一切功能。Yii是最有效率的PHP框架之一。Yii是创始人薛强的心血结晶，于2008年1月1日开始开发。</p>
+                        <div class="">
+                            <a class="btn btn-md btn-primary" href="https://www.yiichina.com" target="_blank">官网</a>
+                            <a class="btn btn-md btn-warning" href="https://www.yiichina.com/doc" target="_blank">文档</a>
+                            <a class="btn btn-md btn-success" href="https://www.yiichina.com/download" target="_blank">下载</a>
+                        </div>
+                    </div>
+                    <div class="markdown hidden" data-id="1.2">
+                        <h1>PHP-ThinkPHP</h1>
+                        <p class="paragraph">ThinkPHP是为了简化企业级应用开发和敏捷WEB应用开发而诞生的。最早诞生于2006年初，2007年元旦正式更名为ThinkPHP，并且遵循Apache2开源协议发布。ThinkPHP从诞生以来一直秉承简洁实用的设计原则，在保持出色的性能和至简的代码的同时，也注重易用性。并且拥有众多原创功能和特性，在社区团队的积极参与下，在易用性、扩展性和性能方面不断优化和改进。</p>
+                        <p class="paragraph">ThinkPHP是一个快速、兼容而且简单的轻量级国产PHP开发框架，诞生于2006年初，原名FCS，2007年元旦正式更名为ThinkPHP，遵循Apache2开源协议发布，从Struts结构移植过来并做了改进和完善，同时也借鉴了国外很多优秀的框架和模式，使用面向对象的开发结构和MVC模式，融合了Struts的思想和TagLib（标签库）、RoR的ORM映射和ActiveRecord模式。</p>
+                        <p class="paragraph">ThinkPHP可以支持windows/Unix/Linux等服务器环境，正式版需要PHP5.0以上版本支持，支持MySql、PgSQL、Sqlite多种数据库以及PDO扩展，ThinkPHP框架本身没有什么特别模块要求，具体的应用系统运行环境要求视开发所涉及的模块。</p>
+                        <div class="">
+                            <a class="btn btn-md btn-primary" href="http://www.thinkphp.cn" target="_blank">官网</a>
+                            <a class="btn btn-md btn-warning" href="https://www.kancloud.cn/manual/thinkphp5" target="_blank">TP5开发手册</a>
+                        </div>
+                    </div>
+                </div>
             </div>
 
             <!-- 合作伙伴 -->
@@ -435,5 +459,5 @@
     <script type="text/javascript" src="js/zepto.min.js"></script>
     <script type="text/javascript" src="js/amazeui.min.js"></script>
     <script type="text/javascript" src="js/swiper.min.js"></script>
-    <script type="text/javascript" src="js/YPCommon.min.js?v=1.0.0"></script>
+    <script type="text/javascript" src="js/YPCommon.min.js?v=1.0.1"></script>
 </html>
