首页底部公司

--- a/index.html
+++ b/index.html
@@ -442,7 +442,7 @@
             </div>
             <div class="site-footer">
                 <div class="copyright">
-                    Copyright © 2019 支付宝（杭州）信息技术有限公司 ｜ ICP证浙B2-20160559
+                    Copyright © 2019 深圳市佰乐信科技有限公司 ｜ ICP证粤B2-20160559
                 </div>
             </div>
         </footer>
